
    HADOOP-10695. KMSClientProvider should respect a configurable timeout. 
    (yoderme via tucu)

    HADOOP-10757. KeyProvider KeyVersion should provide the key name. 
    (asuresh via tucu)

    HADOOP-10769. Create KeyProvider extension to handle delegation tokens.
    (Arun Suresh via atm)

    HADOOP-10812. Delegate KeyProviderExtension#toString to underlying
    KeyProvider. (wang)

  BUG FIXES

    HADOOP-9451. Fault single-layer config if node group topology is enabled.
    (Junping Du via llu)

    HADOOP-8419. Fixed GzipCode NPE reset for IBM JDK. (Yu Li via eyang)

    HADOOP-8177. MBeans shouldn't try to register when it fails to create 
    MBeanName. (Devaraj K via umamahesh)

    HADOOP-8018.  Hudson auto test for HDFS has started throwing javadoc
    (Jon Eagles via bobby)

    HADOOP-7610. Fix for hadoop debian package (Eric Yang via gkesavan)

    HADOOP-7641. Add Apache License to template config files.
    (Eric Yang via atm)

    HADOOP-7621. alfredo config should be in a file not readable by users
    (Alejandro Abdelnur via atm)
    
    HADOOP-7669  Fix newly introduced release audit warning. 
    (Uma Maheswara Rao G via stevel)
    
    HADOOP-6220. HttpServer wraps InterruptedExceptions by IOExceptions 
    if interrupted in startup (stevel)

    HADOOP-7703. Improved exception handling of shutting down web server.
    (Devaraj K via Eric Yang)

    HADOOP-7704. Reduce number of object created by JMXJsonServlet.
    (Devaraj K via Eric Yang)

    HADOOP-7769. TestJMXJsonServlet is failing. (tomwhite)

    HADOOP-7770. ViewFS getFileChecksum throws FileNotFoundException for files in 
    /tmp and /user. (Ravi Prakash via jitendra)

    HADOOP-8141. Add method to SecurityUtil to init krb5 cipher suites.
    (todd)

    HADOOP-7788. Add simple HealthMonitor class to watch an HAService (todd)

    HADOOP-8312. testpatch.sh should provide a simpler way to see which
    warnings changed (bobby)
